FIX: Safari on iOS crashes when pinch-zooming
Not sure why, but setting `z-index: -1` for the composer causes iOS
to crash when pinch zooming on a page. This bug was introduced in
07e5f8907e2a8de27c42c2d6f5a02fc153212288

--- a/app/assets/stylesheets/common/base/compose.scss
+++ b/app/assets/stylesheets/common/base/compose.scss
@@ -637,8 +637,6 @@ div.ac-wrap {
 .tablet-device,
 .mobile-device {
   #reply-control {
-    z-index: -1;
-
     &.open {
       z-index: z("mobile-composer");
     }
